# irrigation_controller_server

./: pyproject.toml
irrigation_controller_server/: celeryconfig.py  config.py  main.py  models.py  tasks.py  test_irrigation_task.py
irrigation_controller_server/interface/: relay.py
irrigation_controller_server/routers/: relay.py  schedule.py  zone.py
