[project]
name = "irrigation-controller-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Tamás Soós",email = "tsoos99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pymodbus (>=3.9.2,<4.0.0)",
    "more-itertools (>=10.7.0,<11.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy-celery-beat (>=0.8.4,<0.9.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
black = "^25.1.0"

[tool.poetry.scripts]
start = "irrigation_controller_server.app:main"
